--- a/src/templates/report_template.html
+++ b/src/templates/report_template.html
@@ -14,7 +14,7 @@
     </style>
 </head>
 <body>
-    <img src="logo.png" alt="Institution Logo" class="logo">
+    <img src="../src/assets/2020-flame-red-01.png" alt="Institution Logo" class="logo">
     <h1>Brachytherapy Evaluation Report</h1>
     <p><strong>Patient Name:</strong> {{ patient_name }}</p>
     <p><strong>Patient MRN:</strong> {{ patient_mrn }}</p>
