Modified the orientation of the organ volumes into rows.

--- a/src/templates/report_template.html
+++ b/src/templates/report_template.html
@@ -29,9 +29,8 @@
             <tr>
                 <th>Organ</th>
                 <th>Volume (cc)</th>
-                <th>D0.1cc (per fraction) (Gy)</th>
-                <th>D1cc (per fraction) (Gy)</th>
-                <th>D2cc (per fraction) (Gy)</th>
+                <th>Dose Metric</th>
+                <th>Value (per fraction) (Gy)</th>
                 <th>D2cc (total) (Gy)</th>
                 <th>BED_this plan (Gy)</th>
                 <th>BED_previous Brachy (Gy)</th>
