Added Point Dose List at bpttom of the page

--- a/src/templates/report_template.html
+++ b/src/templates/report_template.html
@@ -45,5 +45,18 @@
             {{ dvh_results_rows }}
         </tbody>
     </table>
+
+    <h2>Dose Reference Points</h2>
+    <table>
+        <thead>
+            <tr>
+                <th>Point Name</th>
+                <th>Point Dose (Gy)</th>
+            </tr>
+        </thead>
+        <tbody>
+            {{ dose_reference_rows }}
+        </tbody>
+    </table>
 </body>
 </html>
