--- a/src/templates/report_template.html
+++ b/src/templates/report_template.html
@@ -23,7 +23,7 @@
     <p><strong>Number of Fractions:</strong> {{ number_of_fractions }}</p>
     <p><strong>EBRT Dose:</strong> {{ ebrt_dose }} Gy</p>
 
-    <h2>Dose Volume Histogram (DVH) Results</h2>
+    <h2>Target Volume DVH Results</h2>
     <table>
         <thead>
             <tr>
@@ -42,7 +42,30 @@
             </tr>
         </thead>
         <tbody>
-            {{ dvh_results_rows }}
+            {{ target_volume_rows }}
+        </tbody>
+    </table>
+
+    <h2>OAR DVH Results</h2>
+    <table>
+        <thead>
+            <tr>
+                <th>Organ</th>
+                <th>&alpha;/&beta;</th>
+                <th>Volume (cc)</th>
+                <th>Dose Metric</th>
+                <th>Dose (per fraction) (Gy)</th>
+                <th>Total Planned Dose (Gy)</th>
+                <th>BED_this plan (Gy)</th>
+                <th>BED_previous Brachy (Gy)</th>
+                <th>BED_EBRT (Gy)</th>
+                <th>EQD2 (Gy)</th>
+                <th>EQD2 Constraint Met</th>
+                <th>Dose to Meet Constraint (Gy)</th>
+            </tr>
+        </thead>
+        <tbody>
+            {{ oar_rows }}
         </tbody>
     </table>
 
