FEAT: Change report header to 'Dose Summary'.

--- a/src/templates/report_template.html
+++ b/src/templates/report_template.html
@@ -40,7 +40,7 @@
 </head>
 <body>
     <img src="{{ logo_base64 }}" alt="Institution Logo" class="logo">
-    <h1>Brachytherapy Evaluation Report</h1>
+    <h1>Dose Summary</h1>
     <p><strong>Patient Name:</strong> {{ patient_name }}</p>
     <p><strong>Patient MRN:</strong> {{ patient_mrn }}</p>
     <p><strong>Plan Name:</strong> {{ plan_name }}</p>
