--- a/src/templates/report_template.html
+++ b/src/templates/report_template.html
@@ -35,6 +35,7 @@
         tbody tr:nth-child(even) { background-color: #f2f2f2; }
         .met { background-color: #2ecc71; color: white; font-weight: bold; }
         .not-met { background-color: #e74c3c; color: white; font-weight: bold; }
+        .warning { background-color: #f1c40f; color: black; font-weight: bold; } /* Yellow for warning */
         .logo { float: right; max-height: 80px; }
     </style>
 </head>
@@ -57,13 +58,8 @@
                 <th>Volume (cc)</th>
                 <th>Dose Metric</th>
                 <th>Dose (per fraction) (Gy)</th>
-                <th>Total Planned Dose (Gy)</th>
-                <th>BED_this plan (Gy)</th>
-                <th>BED_previous Brachy (Gy)</th>
-                <th>BED_EBRT (Gy)</th>
                 <th>EQD2 (Gy)</th>
-                <th>EQD2 Constraint Met</th>
-                <th>Dose to Meet Constraint (Gy)</th>
+                <th>Constraint Status</th>
             </tr>
         </thead>
         <tbody>
