feat: Add total planned dose column to target DVH results and fix alpha/beta symbol

--- a/src/templates/report_template.html
+++ b/src/templates/report_template.html
@@ -90,6 +90,7 @@
                 <th>Volume (cc)</th>
                 <th>Dose Metric</th>
                 <th>Dose (per fraction) (Gy)</th>
+                <th>Total Planned Dose (Gy)</th>
                 <th>EQD2 (Gy)</th>
             </tr>
         </thead>
