--- a/src/templates/report_template.html
+++ b/src/templates/report_template.html
@@ -77,12 +77,23 @@
 <body>
     <img src="{{ logo_base64 }}" alt="Institution Logo" class="logo">
     <h1>Dose Summary</h1>
-    <p><strong>Patient Name:</strong> {{ patient_name }}</p>
-    <p><strong>Patient MRN:</strong> {{ patient_mrn }}</p>
-    <p><strong>Plan Name:</strong> {{ plan_name }}</p>
-    <p><strong>Brachytherapy Dose per Fraction:</strong> {{ brachy_dose_per_fraction }} Gy</p>
-    <p><strong>Number of Fractions:</strong> {{ number_of_fractions }}</p>
-    <p><strong>EBRT Dose:</strong> {{ ebrt_dose }} Gy</p>
+    <table style="width:100%; border: none; box-shadow: none;">
+        <tr style="border: none;">
+            <td style="width:50%; border: none; vertical-align: top;">
+                <p><strong>Patient Name:</strong> {{ patient_name }}</p>
+                <p><strong>Patient MRN:</strong> {{ patient_mrn }}</p>
+                <p><strong>Plan Name:</strong> {{ plan_name }}</p>
+                <p><strong>Brachytherapy Dose per Fraction:</strong> {{ brachy_dose_per_fraction }} Gy</p>
+                <p><strong>Number of Fractions:</strong> {{ number_of_fractions }}</p>
+                <p><strong>EBRT Dose:</strong> {{ ebrt_dose }} Gy</p>
+            </td>
+            <td style="width:50%; border: none; vertical-align: top; text-align: right;">
+                <p><strong>Plan Date:</strong> {{ plan_date }}</p>
+                <p><strong>Plan Time:</strong> {{ plan_time }}</p>
+                <p><strong>Planned Source AKS:</strong> {{ source_info }}</p>
+            </td>
+        </tr>
+    </table>
 
     <h2>Target Volume DVH Results</h2>
     <table>
