--- a/src/templates/report_template.html
+++ b/src/templates/report_template.html
@@ -82,15 +82,16 @@
             <td style="width:50%; border: none; vertical-align: top;">
                 <p><strong>Patient Name:</strong> {{ patient_name }}</p>
                 <p><strong>Patient MRN:</strong> {{ patient_mrn }}</p>
-                <p><strong>Plan Name:</strong> {{ plan_name }}</p>
-                <p><strong>Brachytherapy Dose per Fraction:</strong> {{ brachy_dose_per_fraction }} Gy</p>
-                <p><strong>Number of Fractions:</strong> {{ number_of_fractions }}</p>
+                <br><br><br>
                 <p><strong>EBRT Dose:</strong> {{ ebrt_dose }} Gy</p>
             </td>
             <td style="width:50%; border: none; vertical-align: top; text-align: right;">
+                <p><strong>Plan Name:</strong> {{ plan_name }}</p>
                 <p><strong>Plan Date:</strong> {{ plan_date }}</p>
                 <p><strong>Plan Time:</strong> {{ plan_time }}</p>
                 <p><strong>Planned Source AKS:</strong> {{ source_info }}</p>
+                <p><strong>Planned Dose per Fraction:</strong> {{ brachy_dose_per_fraction }} Gy</p>
+                <p><strong>Number of Fractions:</strong> {{ number_of_fractions }}</p>
             </td>
         </tr>
     </table>
