feat: Update report template for per-fraction dose display

--- a/src/templates/report_template.html
+++ b/src/templates/report_template.html
@@ -104,8 +104,7 @@
                 <th class="no-transform">&#x3B1;/&#x3B2;</th>
                 <th>Volume (cc)</th>
                 <th>Dose Metric</th>
-                <th>Dose (per fraction) (Gy)</th>
-                <th>Total Planned Dose (Gy)</th>
+                {{ fraction_headers }}
                 <th>EQD2 (Gy)</th>
             </tr>
         </thead>
@@ -122,8 +121,7 @@
                 <th class="no-transform">&#x3B1;/&#x3B2;</th>
                 <th>Volume (cc)</th>
                 <th>Dose Metric</th>
-                <th>Dose (per fraction) (Gy)</th>
-                <th>Total Planned Dose (Gy)</th>
+                {{ fraction_headers }}
                 <th>EQD2 (Gy)</th>
             </tr>
         </thead>
@@ -138,8 +136,7 @@
             <tr>
                 <th>Point Name</th>
                 <th class="no-transform">&#x3B1;/&#x3B2;</th>
-                <th>Dose (per fraction) (Gy)</th>
-                <th>Total Planned Dose (Gy)</th>
+                {{ fraction_headers }}
                 <th>EQD2 (Gy)</th>
             </tr>
         </thead>
