feat: Implement EBRT dose/fraction input and fix DVH calculation issues

--- a/src/templates/report_template.html
+++ b/src/templates/report_template.html
@@ -84,6 +84,7 @@
                 <p><strong>Patient MRN:</strong> {{ patient_mrn }}</p>
                 <br><br><br>
                 <p><strong>EBRT Dose:</strong> {{ ebrt_dose }} Gy</p>
+                <p><strong>EBRT Fractions:</strong> {{ ebrt_fractions }}</p>
             </td>
             <td style="width:50%; border: none; vertical-align: top; text-align: right;">
                 <p><strong>Plan Name:</strong> {{ plan_name }}</p>
